@@ -64,15 +64,6 @@
 /* Constants for userdefchar_mode */
 #define NUM_CCs		8 /* max. number of custom characters */
 
-typedef enum {
-  standard,	/* only char 0 is used for heartbeat */
-  vbar,		/* vertical bars */
-  hbar,		/* horizontal bars */
-  bignum,	/* big numbers */
-  bigchar,	/* big characters */
-  custom	/* custom icons */
-} CGmode;
-
 
 typedef struct cgram_cache {
   unsigned char cache[LCD_DEFAULT_CELLHEIGHT];
