@@ -105,6 +105,16 @@
 #define CURSOR_BLOCK 4
 #define CURSOR_UNDER 5
 
+/* Type of characters currently stored in CGRAM. */
+typedef enum {
+	standard,		/* only char 0 is used for heartbeat */
+	vbar,			/* vertical bars */
+	hbar,			/* horizontal bars */
+	custom,			/* custom settings */
+	bignum,			/* big numbers */
+	bigchar			/* big characters */
+} CGmode;
+
 /* What does the shared module handle look like on the current platform? */
 #define MODULE_HANDLE void*
 
